fixed spacing

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -164,7 +164,6 @@ footer {
 }
 .results-count {
   margin-top: 50px;
-  
 }
 
 .results-title {
@@ -174,7 +173,6 @@ footer {
   font-weight: bold;
   text-decoration: none;
   margin-top: 18px;
-  padding-bottom:50px;
 }
 
 .results-title:hover {
